# projects

gitfam/: .gitattributes  .gitignore  LICENSE  QUICK_REFERENCE.md  README.md  pyproject.toml  setup.ps1  setup.sh
gitfam/docs/: CLI_GUIDE.md  CONTRIBUTING.md  GETTING_STARTED.md  VIDEO_STORAGE.md
gitfam/families/: .gitkeep
gitfam/gitfam/: __init__.py  cli.py
gitfam/gitfam/commands/: __init__.py  add_branch.py  add_member.py  build_web.py  generate_metadata.py  init.py
gitfam/gitfam/web_templates/: base.html  branch.html  index.html  member.html
gitfam/templates/: interview-questions.md  interview-setup.md  profile-template.md
gitfam/tools/: README.md  create-family-branch.sh  create-member.sh
